# picuscan

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Containerfile  Containerfile.base  README.md  REUSE.toml  gradle.properties  justfile  pyproject.toml
.github/: dependabot.yml
.github/actions/container/: action.yml
.github/actions/setup/: action.yml
.github/workflows/: build-app-image.yml  build-base-image.yml  build-release-image.yml  docker-publish.yml  linters.yml  python-publish.yml  tests.yml
LICENSES/: LicenseRef-CWE-Terms-of-Use.txt
docs/: analyzers.md  installation.md  usage.md
patches/ikos/: no-quoteattr.patch
patches/rats/: fix-types.patch
res/: cwe.json
src/picuscan/: __init__.py  __main__.py  config.py  constants.py  io.py  process.py  typing.py
src/picuscan/analyzer/: cwe.py  options.py  tool.py
src/picuscan/commands/: __init__.py  analyze.py  compile_commands.py  cpg.py  misc.py  preprocess.py  preprocess2.py  sarif.py  unity.py
src/picuscan/common/: tqdm_support.py
src/picuscan/compdb/: __init__.py  _converter.py  _types.py  _utils.py
src/picuscan/fs/: __init__.py  _lazyfile.py  _tempfile.py
src/picuscan/gcc/: __init__.py  diagnostics.py
src/picuscan/llvm/: callgraph.py  config.py  unity.py
src/picuscan/logging/: __init__.py  _ansi.py  _tqdm.py
src/picuscan/misc/: asyncutils.py  decorators.py  iterutils.py  math.py  paramtypes.py  strutils.py  sysutils.py
src/picuscan/sarif/: __init__.py  converter.py  models.py  version.py  visitor.py
tests/: conftest.py
tests/e2e/: test_analyze.py
tests/e2e/001-basic-uninit/: main.c  ref.sarif
tests/e2e/002-basic-buffer/: main.c  ref.sarif
tests/integration/: test_cli.py  test_sarif_commands.py
tests/unit/: test_compdb.py  test_fs.py  test_gcc.py  test_logging.py  test_sarif.py
tests/unit/common/: test_file.py  test_git.py  test_str_utils.py
tests/unit/llvm/: test_unity.py
tests/unit/misc/: test_paramtypes.py
typings/llvmlite/: __init__.pyi
typings/llvmlite/binding/: ffi.pyi  initfini.pyi  module.pyi  (+1 more)
typings/neo4j/: __init__.pyi  exceptions.pyi
typings/networkx/: __init__.pyi
typings/xmltodict/: __init__.pyi
(+39 files in other folders)
