# SPDX-FileCopyrightText: 2026 AISEC Code Audit Team
#
# SPDX-License-Identifier: CC0-1.0

[build-system]
requires = ["uv_build>=0.11.28,<0.12.0"]
build-backend = "uv_build"

[project]
name = "picuscan"
version = "1.0.0rc3"
description = "A unified orchestration and enrichment layer for C/C++ static analysis tools"
readme = "README.md"
license = "Apache-2.0"
authors = [{name = "AISEC Code Audit Team"}]
maintainers = [
  { name = "Tobias Specht", email = "tobias.specht@aisec.fraunhofer.de" },
  { name = "Hannah Schmid", email = "hannah.schmid@aisec.fraunhofer.de" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Topic :: Security",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
requires-python = ">=3.11,<3.15"
dependencies = [
  "attrs>=25.2.0",
  "cattrs>=25.1.0",
  "click>=8.0.3",
  "neo4j>=6.0.1",
  "networkx>=3.0",
  "tqdm>=4.68.4",
  "xmltodict>=1.0.0",
  "pandas>=2.0.3",
  "tabulate>=0.9.0",
]

[dependency-groups]
dev = [
  "ruff>=0.15.21",
  "pytest>=9.0.1",
  "pytest-asyncio>=1.3.0",
  "pytest-mock>=3.15.1",
  "pandas-stubs>=2.3.2.250926",
  "mypy>=2.3.0",
  "types-tqdm>=4.68.0.20260608",
  "types-xmltodict>=1.0.1.20260518",
  "types-networkx>=3.6.1.20260624",
  "typing-extensions>=4.0.1",
  "reuse>=6.2.0",
]

[project.scripts]
picuscan = "picuscan:main"

[project.urls]
Documentation = "https://github.com/Fraunhofer-AISEC/picuscan"
Repository = "https://github.com/Fraunhofer-AISEC/picuscan"
"Bug Tracker" = "https://github.com/Fraunhofer-AISEC/picuscan/issues"

[tool.uv]
package = true

[tool.setuptools.package-data]
picuscan = ["res/*"]

[tool.ruff]
line-length = 120
target-version = "py311"
[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.mypy]
strict = true
native_parser = true
num_workers = 4


